--- a/AuthApi/appsettings.json
+++ b/AuthApi/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
+  "ConnectionStrings": {
+    "conn": "Server=127.0.0.1;port=3306;Database=apiauthdb;Uid=root;Pwd=12345"
+  },
+  "jwt": {
+    "key": "clave_secreta_12345678911111111111111111111111111111111111111",
+    "Issuer": "AuthService",
+    "Audience": "AuthServiceUsers"
+  },
   "AllowedHosts": "*"
 }
