Controladores y pruebas iniciales

--- a/AuthApi/appsettings.json
+++ b/AuthApi/appsettings.json
@@ -7,10 +7,10 @@
   },
 
   "ConnectionStrings": {
-    "conn": "Server=127.0.0.1;port=3306;Database=apiauthdb;Uid=root;Pwd=12345"
+    "conn": "Server=127.0.0.1;port=3306;Database=apiauthdb;Uid=root;Pwd=102006"
   },
   "jwt": {
-    "key": "clave_secreta_12345678911111111111111111111111111111111111111",
+    "key": "clave_secreta_123456789",
     "Issuer": "AuthService",
     "Audience": "AuthServiceUsers"
   },
