Solucion de errores menores

--- a/AuthApi/appsettings.json
+++ b/AuthApi/appsettings.json
@@ -10,7 +10,7 @@
     "conn": "Server=127.0.0.1;port=3306;Database=apiauthdb;Uid=root;Pwd=102006"
   },
   "jwt": {
-    "key": "clave_secreta_123456789",
+    "key": "EstaEsUnaClaveSuperSecretaYMasLargaDe32Caracteres",
     "Issuer": "AuthService",
     "Audience": "AuthServiceUsers"
   },
